data/derived/comb/progs/unify/prog1308.ml.out
Characters 252-290:
  let args = [0]@List.combine(List.rev l1)(List.rev l2) in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type int list
       Type 'a * 'b is not compatible with type int 
